EKS YAML/deployment.yaml
# dilwl-campus-4122-v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dilwl-campus-4122-v1
  labels:
    app: dilwl-campus-4122
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dilwl-campus-4122
      version: v1
  template:
    metadata:
      labels:
        app: dilwl-campus-4122
        version: v1
    spec:
      containers:
      - name: dilwl-campus-4122
        image: 971882029798.dkr.ecr.us-east-1.amazonaws.com/dilwl-campus-4122:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "250m" 
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        imagePullPolicy: Always


---
# dilwl-campus-4122-v2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dilwl-campus-4122-v2
  labels:
    app: dilwl-campus-4122
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dilwl-campus-4122
      version: v2
  template:
    metadata:
      labels:
        app: dilwl-campus-4122
        version: v2
    spec:
      containers:
      - name: dilwl-campus-4122
        image: 971882029798.dkr.ecr.us-east-1.amazonaws.com/dilwl-campus-4122:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "250m" 
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        imagePullPolicy: Always
