EKS YAML/metrics-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":"2025-07-02T03:49:37Z","labels":{"app.kubernetes.io/instance":"metrics-server","app.kubernetes.io/managed-by":"EKS","app.kubernetes.io/name":"metrics-server","app.kubernetes.io/version":"0.7.2","k8s-app":"metrics-server"},"name":"metrics-server","namespace":"kube-system","resourceVersion":"665835","uid":"cdfa08f0-4940-44df-b1ce-f22b7b12d96f"},"spec":{"clusterIP":"172.20.140.216","clusterIPs":["172.20.140.2 [...]
  creationTimestamp: "2025-07-02T03:49:37Z"
  labels:
    app.kubernetes.io/instance: metrics-server
    app.kubernetes.io/managed-by: EKS
    app.kubernetes.io/name: metrics-server
    app.kubernetes.io/version: 0.7.2
    k8s-app: metrics-server
  name: metrics-server
  namespace: kube-system
  resourceVersion: "665987"
  uid: cdfa08f0-4940-44df-b1ce-f22b7b12d96f
spec:
  clusterIP: 172.20.140.216
  clusterIPs:
  - 172.20.140.216
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: 10251
  selector:
    app.kubernetes.io/instance: metrics-server
    app.kubernetes.io/name: metrics-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
