EKS YAML/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dilwl-campus-4122-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: dilwl-campus-4122
