EKS YAML/istio-destinationrule.yaml
# istio-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dilwl-campus-4122
  namespace: default
spec:
  host: dilwl-campus-4122-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
